04-ingress/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  labels:
    app: nginx-ingress-demo
spec:
  type: ClusterIP
  selector:
    app: nginx-ingress-demo-pod-labels # Must match pod labels
  ports:
    - name: http
      port: 80
      targetPort: 80
